# antman

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.status  configure  configure.ac  install-fswatch.sh  mkdocs.yml  run-antman-tests.py  test-runner.py
cmd/: daemon.c  info.c  main.c  sketch.c  subcommands.h
docs/: commands.md  index.md  installation.md  the-config.md  the-index.md
misc/: logo.gvdesign
scripts/: install-fswatch.sh
src/: Makefile  Makefile.am  Makefile.in  bigsi.c  bigsi.h  bitvector.c  bitvector.h  bloom.c  bloom.h  bloomfilter.c  bloomfilter.h  config.c  config.h  daemonize.c  daemonize.h  errors.c  errors.h  fastq.c  fastq.h  hashmap.c  hashmap.h  heap.c  heap.h  helpers.c  helpers.h  main.c  map.h  murmurhash2.h  murmurhash3.c  nthash.c  nthash.h  sequence.c  sequence.h  sketch.c  sketch.h  slog.cfg  watcher.c  watcher.h  workerpool.c  workerpool.h
src/config/: config.c  config.h  frozen.c
src/daemonize/: daemonize.c  daemonize.h  watcher.c  watcher.h  workerpool.c
src/fastq/: fastq.c  fastq.h
src/log/: slog.c
src/unit-tests/: Makefile.am  Makefile.in  test_bigsi.c  test_bitvector.c  test_bloomfilter.c  test_config.c  test_heap.c  test_sketch.c
src/unit-tests/.deps/: test_config-test_config.Po  test_heap-test_heap.Po  test_sketch-test_sketch.Po
tests/: Makefile  NiV_6_Malaysia.fasta  config_test.c  heap_test.c  run_unit_tests.sh  sketch_test.c
unit-tests/: Makefile.am  test_bigsi.c  test_bitvector.c  test_bloomfilter.c  test_config.c  test_heap.c  test_nthash.c  test_sequence.c  test_sketch.c
